# calc

./: .gitignore  Cargo.toml  README.md
crates/calc-core/: Cargo.toml
crates/calc-core/src/: ast.rs  document.rs  env.rs  error.rs  eval.rs  interner.rs  lexer.rs  lib.rs  parser.rs  qualified_name.rs  span.rs  token.rs  value.rs
crates/calc-core/tests/: core_tests.rs
crates/calc-lsp/: Cargo.toml
crates/calc-lsp/src/: code_action_provider.rs  completion_provider.rs  diagnostics_provider.rs  document_input_adapter.rs  document_store.rs  formatting_provider.rs  inlay_hint_provider.rs  lib.rs  main.rs  result_adapter.rs  result_comment.rs  server.rs
crates/calc-zed/: Cargo.toml  extension.toml  extension.wasm
crates/calc-zed/languages/calc/: config.toml  highlights.scm
crates/calc-zed/src/: configuration.rs  extension.rs  language_server_locator.rs  lib.rs
examples/: estimate.calc
spec/: core.md  lsp.md  tree-sitter.md  zed.md
spec/changes/: built_in_functions.md  data_types.md  data_types_001.md  lang_improvements_001.md  name_refactors.md  zed_improvements.md
spec/completed/: zed_improvements_001.md
tree-sitter-calc/: grammar.js  package.json
tree-sitter-calc/src/: grammar.json  node-types.json  parser.c
