[package]
name = "calc-lsp"
version = "0.1.0"
edition = "2024"

[features]
default = ["server"]
server = ["dep:tokio", "dep:tower-lsp"]

[dependencies]
calc-core = { path = "../calc-core" }
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread"], optional = true }
tower-lsp = { version = "0.20.0", optional = true }

[[bin]]
name = "calc-lsp"
path = "src/main.rs"
required-features = ["server"]
